welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:17: error: ')' expected but '}' found.
}
^SnakeBuggle:20: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if (estFaceMur() && getDirection() == Direction.WEST) {
        ^